--- a/PowerlineFonts.css
+++ b/PowerlineFonts.css
@@ -1,4 +1,10 @@
 @font-face {
+    font-family: "Meslo LG M Regular Nerd Font Complete";
+    src: local("Meslo LG M Regular Nerd Font Complete"),
+         url(fonts/MesloLGMRegularNerdFontComplete.woff2) format("woff2");
+}
+
+@font-face {
     font-family: "Anonymous Pro";
     src: local("Anonymice Powerline"),
          url(fonts/AnonymousPro.woff2) format("woff2");
